<resources>
    <string name="app_name">My food mart</string>
    <string name="login_text">Login</string>
    <string name="password">Password</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign-Up</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="skip">Skip</string>
    <string name="enter_your_mail">Enter Your Mail</string>
</resources>