<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.Login">

    <TextView
        android:layout_width="187dp"
        android:layout_height="25dp"
        android:text="@string/create_a_new_account"
        android:textColor="@color/dark"
        android:textStyle="italic"
        tools:ignore="MissingConstraints,VisualLintOverlap,TextSizeCheck"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="654dp">

    </TextView>

    <TextView
        android:layout_width="93dp"
        android:layout_height="24dp"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:backgroundTint="@color/grey"
        tools:ignore="MissingConstraints,VisualLintOverlap,TextSizeCheck"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="294dp">

    </TextView>

    <TextView
        android:layout_width="93dp"
        android:layout_height="24dp"
        android:text="@string/email"
        android:textStyle="bold"
        tools:ignore="MissingConstraints,VisualLintOverlap,TextSizeCheck"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="343dp">

    </TextView>

    <TextView
        android:layout_width="93dp"
        android:layout_height="24dp"
        android:text="Password"
        android:textStyle="bold"
        tools:ignore="MissingConstraints,VisualLintOverlap,TextSizeCheck"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="450dp">

    </TextView>


    <TextView
        android:layout_width="128dp"
        android:layout_height="18dp"
        android:text="@string/forgot_password"
        android:textStyle="italic"
        tools:ignore="MissingConstraints,VisualLintOverlap,TextSizeCheck"
        tools:layout_editor_absoluteX="218dp"
        tools:layout_editor_absoluteY="560dp">

    </TextView>

    <TextView
        android:layout_width="128dp"
        android:layout_height="18dp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        tools:ignore="MissingConstraints,VisualLintOverlap,TextSizeCheck"
        tools:layout_editor_absoluteX="227dp"
        tools:layout_editor_absoluteY="654dp">

    </TextView>

    <TextView
        android:layout_width="65dp"
        android:layout_height="17dp"
        android:text="@string/skip"
        android:textStyle="bold"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteX="330dp"
        tools:layout_editor_absoluteY="16dp">

    </TextView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="223dp"
        android:layout_height="225.06dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082"
        app:srcCompat="@drawable/bhoj" />

    <EditText
        android:id="@+id/email"
        android:layout_width="282dp"
        android:layout_height="48dp"
        android:layout_marginBottom="460dp"
        android:hint="@string/enter_your_mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="12dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="64dp"
        android:background="@drawable/rectangle">

    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="282dp"
        android:layout_height="48dp"
        android:layout_marginBottom="348dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="12dp"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteX="64dp"
        android:background="@drawable/rectangle">

    </EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="282dp"
        android:layout_height="48dp"
        android:layout_marginBottom="248dp"
        android:text="@string/login_text"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="64dp"
        tools:targetApi="lollipop"
        >

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>